# quic-file-transfer-sample

./: .gitignore  Cargo.toml  build.sh
dev-certs/: cluster.cert  cluster.key  local.cert  local.key
