[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = [ "bin/client","bin/server", "packages/cert-utils", "packages/utils"]

[workspace.dependencies]
tokio = "1"
clap = "4"
log = "0.4"
env_logger = "0.11"
serde = "1.0"
parking_lot = "0.12"
tracing-subscriber = "0.3"
quinn = "0.11.2"
rustls = "0.23.5"
rcgen = "0.13"
anyhow = "1.0"
